--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,1 +1,25 @@
-<p>hej</p>
+<% if (typeof assetpath === 'undefined') { assetpath = '' } %>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="utf-8" />
+
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+  <meta name="viewport" content="width=device-width" />
+
+  <!-- Bootstrap core CSS -->
+  <link href="<%= assetpath %>assets/css/bootstrap.min.css" rel="stylesheet" />
+
+  <!-- Fonts -->
+  <link href="<%= assetpath %>assets/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+
+	<!-- Core Bootstrap -->
+	<script src="<%= assetpath %>assets/js/bootstrap.min.js" type="text/javascript"></script>
+
+</head>
+<body>
+	<!-- Register here -->
+</body>
+</html>
