--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,8 +18,34 @@
 	<!-- Core Bootstrap -->
 	<script src="<%= assetpath %>assets/js/bootstrap.min.js" type="text/javascript"></script>
 
+    <!-- main.js -->
+    <script src="<%= assetpath %>assets/js/main.js" type="text/javascript"></script>
+
+    <!-- jQuery -->
+    <script src="<%= assetpath %>assets/js/jquery.min.js" type="text/javascript"></script>
 </head>
 <body>
-	<!-- Login here -->
+  <form id="loginForm">
+    <div class="form-group">
+        <label>Name</label>
+        <input
+              name="name"
+              type="text"
+              required="true"
+              placeholder="Name.."
+              class="form-control">
+    </div>
+    <div class="form-group">
+        <label>Password</label>
+        <input
+              name="password"
+              type="password"
+              required="true"
+              placeholder="Password.."
+              class="form-control">
+    </div>
+      <button class="btn" onclick="postForm('#loginForm', '/login', '/')">Login</button>
+      <a href="/register">Register account</a>
+  </form>
 </body>
 </html>
