--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,8 +18,33 @@
 	<!-- Core Bootstrap -->
 	<script src="<%= assetpath %>assets/js/bootstrap.min.js" type="text/javascript"></script>
 
+  <!-- main.js -->
+  <script src="<%= assetpath %>assets/js/main.js" type="text/javascript"></script>
+
+  <!-- jQuery -->
+  <script src="<%= assetpath %>assets/js/jquery.min.js" type="text/javascript"></script>
+
 </head>
 <body>
-	<!-- Register here -->
+  <form id="registerForm">
+    <div class="form-group">
+        <input
+              type="name"
+              name="name"
+              required="true"
+              placeholder="Name.."
+              class="form-control">
+    </div>
+    <div class="form-group">
+        <input
+              type="password"
+              name="password"
+              required="true"
+              placeholder="Password.."
+              class="form-control">
+    </div>
+
+    <button class="btn" onclick="postForm('#registerForm', '/register', '/login')">Register account</button>
+  </form>
 </body>
 </html>
