new thread + start page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,5 @@
 <div>
-  <p>Test header</p>
+  <!-- TODO: link to user profile -->
+  <a href="#"><%= user.name %></a>
+  <img src="<%= user.image %>"/>
 </div>
