--- a/views/start.ejs
+++ b/views/start.ejs
@@ -6,5 +6,9 @@
 </head>
 <body>
 	<% include partials/header %>
+
+  <%- include('partials/posts', {assetpath:assetpath, posts:posts}) %>
+
+  <a href="/post/new">New thread</a>
 </body>
 </html>
