--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -11,5 +11,16 @@
 <!-- Fonts -->
 <link href="<%= assetpath %>assets/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
+<!-- jQuery -->
+<script src="<%= assetpath %>assets/js/jquery.min.js" type="text/javascript"></script>
+<script src="<%= assetpath %>assets/js/jquery-ui.min.js" type="text/javascript"></script>
+
 <!-- Core Bootstrap -->
 <script src="<%= assetpath %>assets/js/bootstrap.min.js" type="text/javascript"></script>
+
+<!--  bootstrap Table Plugin    -->
+<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.js"></script>
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.css">
+
+<!-- main.js -->
+<script src="<%= assetpath %>assets/js/main.js" type="text/javascript"></script>
