--- a/views/partials/posts.ejs
+++ b/views/partials/posts.ejs
@@ -1,6 +1,5 @@
 <table id="posts-table" class="table">
-  <thead data-events="orderEvents">
-    <th data-field="clickable" data-visible="false">Clickable</th>
+  <thead data-events="postEvents">
     <th data-field="id" data-visible="false">Id</th>
     <th data-field="title" data-sortable="true">Title</th>
     <th data-field="created" data-sortable="true">Created</th>
@@ -9,7 +8,6 @@
     <% if (typeof posts !== 'undefined') { %>
       <% posts.forEach(function(post) { %>
         <tr>
-          <td>1</td>
           <td><%= post.id %></td>
           <td><%= post.title %></td>
           <td><%= post.date %></td>
@@ -21,20 +19,14 @@
 
 <script>
 function getSelectedPost(id) {
-  /*get('/views/posts/view', {'post_id':id}, function(data) {
-    // do something
-  }, function(error) {
-    console.log(error);
-  });*/
+  window.location = "/post/" + id;
 }
 
 function createPostsTable() {
   var $table = $('#posts-table');
 
   $table.on('click-row.bs.table', function (e, row, $element) {
-    if (row.clickable == 1){
-      getSelectedPost(row.id);
-    }
+    getSelectedPost(row.id);
   });
 
   $table.bootstrapTable({
@@ -45,7 +37,7 @@ function createPostsTable() {
     showToggle: true,
     showColumns: false,
     pagination: true,
-    searchAlign: 'left',
+    searchAlign: 'right',
     pageSize: 20,
     pageList: [8,10,25,50,100],
     formatShowingRows: function(pageFrom, pageTo, totalRows){
