--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,7 +9,7 @@
 <link href="<%= assetpath %>assets/css/bootstrap.min.css" rel="stylesheet" />
 
 <!-- Fonts -->
-<link href="<%= assetpath %>assets/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
 <!-- jQuery -->
 <script src="<%= assetpath %>assets/js/jquery.min.js" type="text/javascript"></script>
