User page and update on header
ser page and update on header

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,8 +4,13 @@
     <h6 class="text-secondary">Probably the best forum in the world</h6>
   </div>
   <div class="d-flex flex-row justify-content-start align-items-center">
-    <div><a href="/user" style="height: 1rem;"><%= user.name %></a></div>
+  	<a href="../">Threads</a>
+
+    <div><a href="../userpage" style="height: 1rem;"><%= user.name %></a></div>
     <img src="<%= user.image %>" class="bg-secondary rounded-circle" style="height: 30px; width: 30px;"/>
+    
+    <a href="">Log Out</a>
+
   </div>
 
 </div>
