--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,10 +23,26 @@
 
     <!-- jQuery -->
     <script src="<%= assetpath %>assets/js/jquery.min.js" type="text/javascript"></script>
+		<style>
+		.center {
+		    margin: auto;
+		    width: 60%;
+
+		    border: 3px solid #73AD21;
+		    padding: 10px;
+		}
+		.center2 {
+		    margin: 40px;
+				text-align: center;
+		    width: 40%;
+		    border: 3px solid #73AD21;
+		    padding: 10px;
+		}
+		</style>
 </head>
 <body>
   <form id="loginForm" action="javascript:void(0);">
-    <div class="form-group">
+    <div class="center form-group">
         <label>Name</label>
         <input
               name="name"
@@ -35,7 +51,7 @@
               placeholder="Name.."
               class="form-control">
     </div>
-    <div class="form-group">
+    <div class="center form-group">
         <label>Password</label>
         <input
               name="password"
@@ -44,8 +60,8 @@
               placeholder="Password.."
               class="form-control">
     </div>
-      <button class="btn" onclick="postForm('#loginForm', '/login', '/')">Login</button>
-      <a href="/register">Register account</a>
+      <button class="center2 btn" onclick="postForm('#loginForm', '/login', '/')">Login</button>
+      <a class="center" href="/register">Register account</a>
   </form>
 </body>
 </html>
