--- a/views/thread.ejs
+++ b/views/thread.ejs
@@ -8,8 +8,12 @@
 	<% include partials/header %>
 
   <div>
+		<div class="p-3 mb-2 bg-primary text-white">
     <h2><%= post.title %></h2>
+	</div>
+		<div class="container" colour>
     <p><%= post.text %></p>
+		</div>
   </div>
 </body>
 </html>
