added a nice logo to the login page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,7 @@
 		<style>
 		.center {
 		    margin: auto;
-		    width: 60%;
+		    width: 95%;
 
 		    border: 3px solid #73AD21;
 		    padding: 10px;
@@ -38,9 +38,19 @@
 		    border: 3px solid #73AD21;
 		    padding: 10px;
 		}
+		.center3 {
+		    margin: auto;
+				text-align: center;
+		    width: 50%;
+
+
+		}
 		</style>
 </head>
 <body>
+
+<img class="center3" src="<%= assetpath %>assets/images/forum.png" alt="Forum Logo">
+
   <form id="loginForm" action="javascript:void(0);">
     <div class="center form-group">
         <label>Name</label>
