--- a/views/thread.ejs
+++ b/views/thread.ejs
@@ -7,9 +7,56 @@
 <body>
 	<% include partials/header %>
 
-  <div>
-    <h2><%= post.title %></h2>
-    <p><%= post.text %></p>
-  </div>
+	<div class="container">
+		<div>
+	    <h2><%= post.title %></h2>
+	    <p><%= post.text %></p>
+
+			<form id="starForm" action="javascript:void(0);">
+				<input name="post_id" type="hidden" value="<%= post.id %>"/>
+
+				<% if (post.favorite){ %>
+					<button class="btn btn-warning" onclick="postForm('#starForm', '/favorite/', '/post/<%= post.id %>')">
+						<i class="fas fa-star"></i>
+					</button>
+				<% } else{ %>
+					<button class="btn btn-secondary" onclick="postForm('#starForm', '/favorite/', '/post/<%= post.id %>')">
+						<i class="far fa-star"></i>
+					</button>
+				<% } %>
+
+
+			</form>
+	  </div>
+
+		<ul>
+			<% if (typeof sub_posts !== 'undefined') { %>
+				<% sub_posts.forEach(function(spost) { %>
+					<li>
+						<h2><%= spost.title %></h2>
+				    <p><%= spost.text %></p>
+					</li>
+				<% }); %>
+			<% } %>
+		</ul>
+
+		<% if (!post.locked){ %>
+			<h4>Comment</h4>
+			<form id="commentForm" action="javascript:void(0);">
+				<input name="title" type="hidden" value="Re: <%= post.title %>"/>
+				<input name="parent_id" type="hidden" value="<%= post.id %>"/>
+
+		    <div class="form-group">
+		      <textarea class="form-control"
+		                name="text"
+		                rows="3"
+		                placeholder="E.g. I loved your post, brah"
+		                ></textarea>
+		    </div>
+
+		    <button class="btn" onclick="postForm('#commentForm', '/post/new', '/post/<%= post.id %>')">Add comment</button>
+		  </form>
+		<% } %>
+	</div>
 </body>
 </html>
