--- a/views/newpost.ejs
+++ b/views/newpost.ejs
@@ -3,32 +3,38 @@
 <html lang="en">
 <head>
 	<% include partials/head %>
+
+	<style>
+		.ex1 {
+	margin: 10px;
+}
+	</style>
 </head>
 <body>
 	<% include partials/header %>
 
   <form id="newPostForm" action="javascript:void(0);">
     <div class="form-group">
-        <label class="control-label">Title</label>
+        <label class="ex1 control-label">Title</label>
         <input
               name="title"
               type="text"
               required="true"
               placeholder="Name..."
-              class="form-control">
+              class="ex1 form-control">
     </div>
 
     <div class="form-group">
-      <label class="control-label">Text</label>
-      <textarea class="form-control" required
+      <label class="ex1 control-label">Text</label>
+      <textarea class="ex1 form-control" required
                 name="text"
                 rows="3"
                 placeholder="E.g. My first forum thread"
                 ></textarea>
     </div>
 
-    <button class="btn btn-success" onclick="postForm('#newPostForm', '/post/new', '/')">Start thread</button>
-		<button class="btn btn-light" onclick="">Cancel</button>
+    <button class="ex1 btn btn-success" onclick="postForm('#newPostForm', '/post/new', '/')">Start thread</button>
+		<button class=" ex1 btn btn-light" onclick="">Cancel</button>
   </form>
 </body>
 </html>
