--- a/views/thread.ejs
+++ b/views/thread.ejs
@@ -42,6 +42,7 @@
 			<% } %>
 	  </div>
 
+		<h4>Comments</h4>
 		<ul>
 			<% if (typeof sub_posts !== 'undefined') { %>
 				<% sub_posts.forEach(function(spost) { %>
