--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,7 @@
 		.center {
 		    margin: auto;
 		    width: 95%;
-
+		    width: 60%;
 		    border: 3px solid #73AD21;
 		    padding: 10px;
 		}
@@ -38,11 +38,11 @@
 		    border: 3px solid #73AD21;
 		    padding: 10px;
 		}
+
 		.center3 {
 		    margin: auto;
 				text-align: center;
 		    width: 50%;
-
 		}
 		</style>
 </head>
