--- a/views/thread.ejs
+++ b/views/thread.ejs
@@ -78,6 +78,16 @@
 		  </form>
 		<% } %>
 	</div>
+
+  <div>
+		<div class="p-3 mb-2 bg-primary text-white">
+    <h2><%= post.title %></h2>
+	</div>
+		<div class="container" colour>
+    <p><%= post.text %></p>
+		</div>
+  </div>
+
 </body>
 <script>
 
