--- a/views/userpage.ejs
+++ b/views/userpage.ejs
@@ -7,8 +7,24 @@
 
 </head>
 <body>
+
+	<% include partials/header %>
+
+	<form id="pictureForm" action="javascript:void(0);">
+    <div class="form-group">
+        <input
+              type="url"
+              name="image"
+              required="true"
+              placeholder="Image Url..."
+              class="form-control">
+    </div>
+
+    <button class="btn" onclick="postForm('#pictureForm', '/userpage', '/userpage')">Change Picture</button>
+  </form>
+
 	<div class="container">
-	  <h2>Threads</h2>
+	  <h2>Favorite Threads</h2>
 	  <table id="posts-table" class="table table-hover">
 	    <thead class="thead-light" data-events="postEvents">
 	      <th scope="col" data-field="id" data-visible="false">Id</th>
@@ -20,10 +36,10 @@
 	      <% if (typeof posts !== 'undefined') { %>
 	        <% posts.forEach(function(post) { %>
 	          <tr>
-	            <td><%= post.id %></td>
-	            <td><%= post.title %></td>
-	            <td><%= post.date %></td>
 	            <% if (post.favorite){ %>
+		            <td><%= post.id %></td>
+		            <td><%= post.title %></td>
+		            <td><%= post.date %></td>
 	              <td class="text-warning"><i class="fas fa-star"></i></td>
 	            <% } else{ %>
 	              <td class="text-secondary"><i class="far fa-star"></i></td>
@@ -51,7 +67,7 @@ function createPostsTable() {
     toolbar: ".toolbar",
     clickToSelect: false,
     showRefresh: false,
-    search: true,
+    search: false,
     showToggle: false,
     showColumns: false,
     pagination: false,
