added buttons and default profile pic

--- a/views/newpost.ejs
+++ b/views/newpost.ejs
@@ -26,7 +26,7 @@
 
     <div class="form-group">
       <label class="ex1 control-label">Text</label>
-      <textarea class="ex1 form-control" required
+      <textarea class="ex1 form-control"
                 name="text"
                 rows="3"
                 placeholder="E.g. My first forum thread"
@@ -34,7 +34,8 @@
     </div>
 
     <button class="ex1 btn btn-success" onclick="postForm('#newPostForm', '/post/new', '/')">Start thread</button>
-		<button class=" ex1 btn btn-light" onclick="">Cancel</button>
+		<a href="/" class="btn btn-light" >Cancel</a>
   </form>
+
 </body>
 </html>
