--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,11 +3,19 @@
     <h2 class="font-weight-bold">LocalHost:8081</h2>
     <h6 class="text-secondary">Probably the best forum in the world</h6>
   </div>
-  <a href="/">Threads</a>
-  <a href="">Log Out</a>
-  <div class="d-flex flex-row justify-content-start align-items-center">
-    <div><a href="/userpage" style="height: 1rem;"><%= user.name %></a></div>
-    <img src="<%= user.image %>" class="bg-secondary rounded-circle" style="height: 30px; width: 30px;"/>
-  </div>
 
+  <div class="d-flex flex-row" >
+    <a href="/" class="mr-1 btn btn-outline-primary " >Threads</a>
+    <a href="" class="mr-1 btn btn-outline-danger " >Log Out</a>
+
+        <div class="d-flex flex-row justify-content-start align-items-center">
+          <div><a href="/userpage" class="btn btn-outline-secondary" ><%= user.name %></a></div>
+
+          <% if (user.image==null){ %>
+            <img src="<%= assetpath %>assets/images/kappa.png" class="ml-1 bg-secondary rounded-circle" style="height: 30px; width: 30px;"/>
+          <%} else { %>
+            <img src="<%= user.image %>" class="bg-secondary rounded-circle" style="height: 30px; width: 30px;"/>"
+          <% } %>
+        </div>
+  </div>
 </div>
