--- a/views/thread.ejs
+++ b/views/thread.ejs
@@ -74,7 +74,7 @@
 		                ></textarea>
 		    </div>
 
-		    <button class="btn" onclick="postForm('#commentForm', '/post/new', '/post/<%= post.id %>')">Add comment</button>
+		    <button class="btn-light" onclick="postForm('#commentForm', '/post/new', '/post/<%= post.id %>')">Add comment</button>
 		  </form>
 		<% } %>
 	</div>
