--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,32 +1,12 @@
 <div class="container d-flex flex-row justify-content-between align-items-center mb-4">
   <div>
-    <h2 class="font-weight-bold">LocalHost:8081</h2>
-    <h6 class="text-secondary">Probably the best forum in the world</h6>
-  </div>
-<<<<<<< HEAD
-=======
-  <a href="/">Threads</a>
-  <a href="">Log Out</a>
-  <div class="d-flex flex-row justify-content-start align-items-center">
-    <div><a href="/userpage" style="height: 1rem;"><%= user.name %></a></div>
-    <img src="<%= user.image %>" class="bg-secondary rounded-circle" style="height: 30px; width: 30px;"/>
-    
-    <button class="btn" onclick="logout()">Log out</button>
+      <h2 class="font-weight-bold">LocalHost:8081</h2>
+      <h6 class="text-secondary">Probably the best forum in the world</h6>
+    </div>
 
-    <script>
-
-    function clearCookies(){
-    	document.cookie = "x_access_token=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
-	}
-
-    </script>
-
-  </div>
->>>>>>> f3f6d445bf7c1dd42bd95a972d336f53a04eba96
 
   <div class="d-flex flex-row" >
     <a href="/" class="mr-1 btn btn-outline-primary " >Threads</a>
-    <a href="" class="mr-1 btn btn-outline-danger " >Log Out</a>
 
         <div class="d-flex flex-row justify-content-start align-items-center">
           <div><a href="/userpage" class="btn btn-outline-secondary" ><%= user.name %></a></div>
@@ -37,5 +17,13 @@
             <img src="<%= user.image %>" class="bg-secondary rounded-circle" style="height: 30px; width: 30px;"/>"
           <% } %>
         </div>
+    <a href="" class="mr-1 ml-2 btn btn-outline-danger " >Log Out</a>
+    <script>
+
+    function clearCookies(){
+       document.cookie = "x_access_token=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+      }
+
+    </script>
   </div>
 </div>
