Fixing frontend bugs

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,11 @@
 <div class="container d-flex flex-row justify-content-between align-items-center mb-4">
 
-  <div class="d-flex flex-row" >
+  <div>
     <h2 class="font-weight-bold">LocalHost:8081</h2>
     <h6 class="text-secondary">Probably the best forum in the world</h6>
   </div>
   <div class="d-flex flex-row justify-content-start align-items-center">
-    
+
 
         <div class="d-flex flex-row justify-content-start align-items-center">
         <a href="/" class="mr-1 btn btn-outline-primary " >Threads</a>
@@ -17,22 +17,5 @@
           <% } %>
         </div>
     <button class="mr-1 ml-2 btn btn-outline-danger " onclick="deleteAllCookies()">Log out</button>
-    <script>
-
-    function clearCookies(){
-       document.cookie = "x_access_token=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
-      }
-    function deleteAllCookies() {
-    var cookies = document.cookie.split(";");
-    console.log(cookies[0]);
-    for (var i = 0; i < cookies.length; i++) {
-        var cookie = cookies[i];
-        var eqPos = cookie.indexOf("=");
-        var name = eqPos > -1 ? cookie.substr(0, eqPos) : cookie;
-        document.cookie = name + "=;expires=Thu, 01 Jan 1970 00:00:00 GMT";
-    }
-}
-
-    </script>
   </div>
 </div>
