--- a/views/partials/posts.ejs
+++ b/views/partials/posts.ejs
@@ -7,7 +7,7 @@
     <thead class="thead-light" data-events="postEvents">
       <th scope="col" data-field="id" data-visible="false">Id</th>
       <th scope="col" data-field="title" data-sortable="true">Title</th>
-      <th scope="col" data-field="created" data-sortable="true">Created</th>
+      <th scope="col" data-field="created" data-sortable="true" data-width=160px>Created</th>
       <th scope="col" data-field="favorite" data-sortable="false" data-width=20px data-align='center' data-halign='center'></th>
     </thead>
     <tbody>
