--- a/views/userpage.ejs
+++ b/views/userpage.ejs
@@ -13,7 +13,7 @@
   <div class="container">
 
     <div class="in-row">
-      <h1>Welcome home <%= user.name %>!</h1>
+      <h1>Welcome home <%= found_user.name %>!</h1>
       <button class="btn ban-btn" onclick="postForm('#pictureForm', '/userpage', '/userpage')">Ban User</button>
     </div>
     <hr>
