--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
 
         <div class="d-flex flex-row justify-content-start align-items-center">
         <a href="/" class="mr-1 btn btn-outline-primary " >Threads</a>
-          <div><a href="/userpage" class="btn btn-outline-secondary" ><%= user.name %></a></div>
+          <div><a href="/userpage/<%= user.id %>" class="btn btn-outline-secondary" ><%= user.name %></a></div>
           <% if (user.image==null){ %>
             <img src="<%= assetpath %>assets/images/kappa.png" class="ml-1 bg-secondary rounded-circle" style="height: 30px; width: 30px;"/>
           <%} else { %>
