--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -24,3 +24,6 @@
 
 <!-- main.js -->
 <script src="<%= assetpath %>assets/js/main.js" type="text/javascript"></script>
+
+<!-- footer.css -->
+<link href="<%= assetpath %>assets/css/footer.css" rel="stylesheet" />
