--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,6 +16,8 @@
             <img src="<%= user.image %>" class="bg-secondary rounded-circle" style="height: 30px; width: 30px;"/>"
           <% } %>
         </div>
-    <button class="mr-1 ml-2 btn btn-outline-danger " onclick="deleteAllCookies()">Log out</button>
+    <!-- <button class="mr-1 ml-2 btn btn-outline-danger " onclick="">Log out</button> -->
+    <a href="/logout"> Log out </a>
+
   </div>
 </div>
