--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,9 @@
 	<footer>
 		<div class="footer-container">
+			<h1 class="footer-h">LocalHost:8081</h1>
+			<hr class="gray-line">
 			<ul class="footer-list">
-			  <li><a href="/threads">Threads</a></li>
+			  <li><a href="/thread">Threads</a></li>
 			  <li><a href="/logout">Log out</a></li>
 			  <li><a href="/userpage/<%= user.id %>"><%= user.name %></a></li>
 			</ul>  
