--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -1,14 +1,16 @@
+footer {
+	background-color: #006699;
+}
 .footer-container {
 	margin-top: 100px;
 	width: 100%;
-	height: 200px;
+	height: 250px;
 	background-color: #006699;
 	color: #fff;
 }
 
 .footer-list {
 	list-style-type:none;
-	padding-top: 50px;
 	padding-left: 80px;
 }
 
@@ -23,4 +25,20 @@ ul li {
 
 .footer-list a:hover{
 	color: #ccc;
+}
+
+.footer-h {
+	padding-top: 20px;
+	padding-left: 80px;
+}
+
+.gray-line {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    padding: 0;
+    width: 90%;
 }
