--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,29 +26,29 @@
 		<style>
 		.center {
 		    margin: auto;
-		    width: 95%;
+
 		    width: 60%;
-		    border: 3px solid #73AD21;
+		    border: 3px solid #4f7080;
 		    padding: 10px;
 		}
 		.center2 {
-		    margin: 40px;
+		    margin: 30px;
 				text-align: center;
-		    width: 40%;
-		    border: 3px solid #73AD21;
+		    width: 60%;
+		    border: 3px solid #4f7080;
 		    padding: 10px;
 		}
 
 		.center3 {
-		    margin: auto;
-				text-align: center;
-		    width: 50%;
+				width: 50%;
+    		margin-left: auto;
+    		margin-right: auto;
 		}
 		</style>
 </head>
 <body>
 
-<img class="center3" src="<%= assetpath %>assets/images/forum.png" alt="Forum Logo">
+<img class="row text-center center3" src="<%= assetpath %>assets/images/forum.png" alt="Forum Logo">
 
   <form id="loginForm" action="javascript:void(0);">
     <div class="center form-group">
@@ -69,8 +69,10 @@
               placeholder="Password.."
               class="form-control">
     </div>
+		<div class="center3">
       <button class="center2 btn" onclick="postForm('#loginForm', '/login', '/')">Login</button>
-      <a class="center" href="/register">Register account</a>
+      <a class="center2" href="/register">Register account</a>
+		</div>
   </form>
 </body>
 </html>
