--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,11 +13,11 @@
           <% if (user.image==null){ %>
             <img src="<%= assetpath %>assets/images/kappa.png" class="ml-1 bg-secondary rounded-circle" style="height: 30px; width: 30px;"/>
           <%} else { %>
-            <img src="<%= user.image %>" class="bg-secondary rounded-circle" style="height: 30px; width: 30px;"/>"
+            <img src="<%= user.image %>" class="bg-secondary rounded-circle" style="height: 30px; width: 30px;"/>
           <% } %>
         </div>
     <!-- <button class="mr-1 ml-2 btn btn-outline-danger " onclick="">Log out</button> -->
-    <a href="/logout"> Log out </a>
+    <a class="ml-2" href="/logout"> Log out </a>
 
   </div>
 </div>
