--- a/views/thread.ejs
+++ b/views/thread.ejs
@@ -14,7 +14,8 @@
 			<p><%= post.date %></p>
 
 			<div class="d-flex flex-row justify-content-start align-items-center">
-				<div><a id="name-<%= post.id %>" href="/userpage/<%= post.user_id %>" style="height: 1rem;"></a></div>
+				<div><h5> Posted by </h5><a id="name-<%= post.id %>" href="/userpage/<%= post.user_id %>" style="height: 1rem;"></a>
+				</div>
 				<img id="image-<%= post.id %>" src="" class="bg-secondary rounded-circle" style="height: 30px; width: 30px;"/>
 		  </div>
 
@@ -22,11 +23,11 @@
 				<input name="post_id" type="hidden" value="<%= post.id %>"/>
 
 				<% if (post.favorite){ %>
-					<button class="btn btn-warning" onclick="postForm('#starForm', '/favorite/', '/post/<%= post.id %>')">
+					<button class="btn btn-warning" data-toggle="tooltip" title="Unfavorite" onclick="postForm('#starForm', '/favorite/', '/post/<%= post.id %>')">
 						<i class="fas fa-star"></i>
 					</button>
 				<% } else{ %>
-					<button class="btn btn-secondary" onclick="postForm('#starForm', '/favorite/', '/post/<%= post.id %>')">
+					<button class="btn btn-secondary" data-toggle="tooltip" title="Favorite" onclick="postForm('#starForm', '/favorite/', '/post/<%= post.id %>')">
 						<i class="far fa-star"></i>
 					</button>
 				<% } %>
