added more clarity in how everything looks!

--- a/views/newpost.ejs
+++ b/views/newpost.ejs
@@ -30,6 +30,7 @@
                 name="text"
                 rows="3"
                 placeholder="E.g. My first forum thread"
+								required
                 ></textarea>
     </div>
 
