--- a/views/register.ejs
+++ b/views/register.ejs
@@ -23,11 +23,33 @@
 
   <!-- jQuery -->
   <script src="<%= assetpath %>assets/js/jquery.min.js" type="text/javascript"></script>
+	<style>
+		.center {
+				margin: auto;
 
+				width: 60%;
+				border: 3px solid #4f7080;
+				padding: 10px;
+		}
+		.center2 {
+				margin: 30px;
+				text-align: center;
+				width: 60%;
+				border: 3px solid #4f7080;
+				padding: 10px;
+		}
+		.center3 {
+			margin: 10px;
+			width: 30%;
+			margin-left: auto;
+			margin-right: auto;
+		}
+	</style>
 </head>
 <body>
+	<h1 class="center3">Register New User</h1>
   <form id="registerForm" action="javascript:void(0);">
-    <div class="form-group">
+    <div class="center form-group">
         <input
               type="name"
               name="name"
@@ -35,7 +57,7 @@
               placeholder="Name.."
               class="form-control">
     </div>
-    <div class="form-group">
+    <div class="center form-group">
         <input
               type="password"
               name="password"
@@ -43,8 +65,10 @@
               placeholder="Password.."
               class="form-control">
     </div>
-
-    <button class="btn" onclick="postForm('#registerForm', '/register', '/login')">Register account</button>
+	<div class="center3">
+    <button class="ml-4 mr-4 center3 btn btn-outline-primary" onclick="postForm('#registerForm', '/register', '/login')">Register</button>
+		<a href="/login" class="btn btn-light" >Cancel</a>
+	</div>
   </form>
 </body>
 </html>
