--- a/views/thread.ejs
+++ b/views/thread.ejs
@@ -106,4 +106,5 @@ getUserInfo("<%= post.user_id %>", "name-<%= post.id %>", "image-<%= post.id %>"
 
 
 </script>
+<% include partials/footer %>
 </html>
