--- a/views/login.ejs
+++ b/views/login.ejs
@@ -71,6 +71,15 @@
     </div>
 		<div class="center3">
       <button class="center2 btn" onclick="postForm('#loginForm', '/login', '/')">Login</button>
+
+			<div class="form-group has-error has-feedback">
+      <label class="col-sm-2 control-label" for="inputError">Input with error and glyphicon</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="inputError">
+        <span class="glyphicon glyphicon-remove form-control-feedback"></span>
+      </div>
+    </div>
+
       <a class="center2" href="/register">Register account</a>
 		</div>
   </form>
