--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,12 +1,16 @@
+<head>
+  <link rel="stylesheet" type="text/css" href="<%= assetpath %>assets/css/header.css">
+</head>
+
 <div class="container d-flex flex-row justify-content-between align-items-center mb-4">
-
   <div>
-    <h2 class="font-weight-bold">LocalHost:8081</h2>
-    <h6 class="text-secondary">Probably the best forum in the world</h6>
+    <a href="/">
+      <img class="mt-3 row text-center nice" src="<%= assetpath %>assets/images/forum.png" alt="Header Forum Logo">
+    </a>
   </div>
+
+
   <div class="d-flex flex-row justify-content-start align-items-center">
-
-
         <div class="d-flex flex-row justify-content-start align-items-center">
         <a href="/" class="mr-1 btn btn-outline-primary " >Threads</a>
         <a href="/about" class="mr-1 btn btn-outline-primary " >About</a>
@@ -14,11 +18,11 @@
           <% if (user.image==null){ %>
             <img src="<%= assetpath %>assets/images/kappa.png" class="ml-1 bg-secondary rounded-circle" style="height: 30px; width: 30px;"/>
           <%} else { %>
-            <img src="<%= user.image %>" class="bg-secondary rounded-circle" style="height: 30px; width: 30px;"/>
+            <img src="<%= user.image %>" class="ml-1 bg-secondary rounded-circle" style="height: 30px; width: 30px;"/>
           <% } %>
         </div>
     <!-- <button class="mr-1 ml-2 btn btn-outline-danger " onclick="">Log out</button> -->
-    <a class="ml-2" href="/logout"> Log out </a>
+    <a class="btn btn-outline-danger ml-2" href="/logout"> Log out </a>
 
   </div>
 </div>
