added Help section!

--- a/public/assets/css/threads.css
+++ b/public/assets/css/threads.css
@@ -1,3 +1,11 @@
 .thread-lightgray{
   background-color: #f0ecec;
 }
+
+.post-title{
+  background-color: #006699;
+}
+
+.white-font{
+  color: #fff;
+}
