--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,7 +34,7 @@
 		.center2 {
 		    margin: 30px;
 				text-align: center;
-		    width: 60%;
+		    width: 50%;
 		    border: 3px solid #4f7080;
 		    padding: 10px;
 		}
@@ -72,15 +72,9 @@
 		<div class="center3">
       <button class="center2 btn" onclick="postForm('#loginForm', '/login', '/')">Login</button>
 
-			<div class="form-group has-error has-feedback">
-      <label class="col-sm-2 control-label" for="inputError">Input with error and glyphicon</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" id="inputError">
-        <span class="glyphicon glyphicon-remove form-control-feedback"></span>
-      </div>
-    </div>
 
-      <a class="center2" href="/register">Register account</a>
+
+      <a class="rounded center2" href="/register">Register account</a>
 		</div>
   </form>
 </body>
