--- a/views/thread.ejs
+++ b/views/thread.ejs
@@ -10,7 +10,7 @@
 
 	<div class="container">
 		<div>
-	    <h2><%= post.title %></h2>
+	    <h2 class="post-title white-font rounded"><%= post.title %></h2>
 	    <p><%= post.text %></p>
 			<p><%= post.date %></p>
 
