--- a/views/help.ejs
+++ b/views/help.ejs
@@ -89,19 +89,19 @@
 </div>
 
 <form id="newRequestForm" action="javascript:void(0);">
-  <div class="ex1 form-group">
-      <label class="ex1 control-label">Topic</label>
+  <div class="normal-margins form-group">
+      <label class="normal-margins control-label">Topic</label>
       <input
             name="title"
             type="text"
             required="true"
             placeholder="E.g. Broken Cat..."
-            class="ex1 form-control">
+            class="normal-margins  form-control">
   </div>
 
-  <div class="ex1 form-group">
-    <label class="ex1 control-label">What's up?</label>
-    <textarea class="ex1 form-control"
+  <div class="normal-margins form-group">
+    <label class="normal-margins control-label">What's up?</label>
+    <textarea class="normal-margins form-control"
               name="text"
               rows="3"
               placeholder="E.g. My cat broke..."
@@ -109,7 +109,7 @@
               ></textarea>
   </div>
 
-  <button style="margin:20px;" class="btn btn-outline-success" onclick="sent()">Send Request</button>
+  <button class="normal-margins2 btn btn-outline-success" onclick="sent()">Send Request</button>
 </form>
 
 <script>
