--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -27,3 +27,6 @@
 
 <!-- footer.css -->
 <link href="<%= assetpath %>assets/css/footer.css" rel="stylesheet" />
+
+<!-- help.css -->
+<link href="<%= assetpath %>assets/css/help.css" rel="stylesheet" />
