--- a/views/userpage.ejs
+++ b/views/userpage.ejs
@@ -10,11 +10,11 @@
 </head>
 <body>
 
-	
+
   <div class="container">
 
     <div class="in-row">
-      <h1>Welcome home <%= found_user.name %>!</h1>
+      <h1>Welcome to <%= found_user.name %>!</h1>
       <% if (user.admin && !found_user.admin) { %>
 
         <form id="banForm" action="javascript:void(0);">
@@ -42,7 +42,7 @@
 
     <hr>
 
-  	
+
   	  <h2>Favorite Threads</h2>
   	  <table id="posts-table" class="table table-hover">
   	    <thead class="thead-light" data-events="postEvents">
@@ -92,7 +92,7 @@
                     <% } %>
                   <% }); %>
                 <% } %>
-              
+
             </tr>
           <% }); %>
         <% } %>
